# koma-run

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml
src-agents/: Cargo.toml
src-agents/src/: lib.rs  main.rs
src-backend/: Cargo.toml
src-backend/src/: main.rs
src-core/: Cargo.toml
src-core/src/: lib.rs
src-web/: index.html  package.json  tsconfig.node.json
src-web/src/: main.tsx  router.tsx
src-web/src/routes/: index.tsx
