[package]
name = "koma-agents"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "agent"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
koma-core = { path = "../src-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.24"
pyo3 = { version = "0.22", features = ["auto-initialize"] }
