[package]
name = "koma-backend"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "koma-backend"
path = "src/main.rs"

[dependencies]
koma-core = { path = "../src-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
actix-web = "4"
actix-ws = "0.3"
actix-cors = "0.7"
